deployment_v1/mongo-ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-example
  namespace: practice2
spec:
  controller: k8s.io/ingress-nginx

# controller: nginx.org/ingress-controller
#beta1
