deployment_v1/mongo-ui-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-ui-deployment
  namespace: practice2
  labels:
    app: mongo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-ui
  template:
    metadata:
      labels:
        app: mongo-ui
    spec:
      # hostNetwork: true
      containers:
      - name: mongo-ui
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-ui-service
  namespace: practice2
spec:
  type: LoadBalancer
  selector:
    app: mongo-ui
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8081
