deployment_v1/react-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: practice2
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: project-frontend
        ports:
        - containerPort: 3000
        imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: practice2
spec:
  # type: NodePort
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    # nodePort: 30005
