deployment_v1/mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: practice2
spec:
  ingressClassName: nginx-example
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-ui-service
            port:
              number: 8080

#   annotations:
#     kubernetes.io/ingress.nginx: ingress-nginx
# spec:
#   ingressClassName: mongo-example
#   rules:
#   - host: host1.domain.ext
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: mongo-ui
#             port:
#               number: 80
